--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "uuidv4": "^6.2.13",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
